# thdm_one_loop_extrema

./: .gitignore  CMakeLists.txt  README.md  notes.md
plots/: make_potential_plots.py  make_rge_plots.py
plots/RGE/: make_rge_plots.py
plots/RGE/type_a2/: make_rge_plots.py
plots/potentials/: make_potential_plots.py
plots/potentials/type_a2/: make_potential_plots.py
run_data/: README.md  rge_couplings.csv  type_a1.csv  type_a2.csv
run_data/RGE/: rge_0.csv  rge_1.csv  rge_10.csv  rge_100.csv  rge_1000.csv  rge_1001.csv  rge_1002.csv  rge_1003.csv  rge_1004.csv  rge_1005.csv  rge_1006.csv  rge_1007.csv  rge_1008.csv  rge_1009.csv  rge_101.csv  rge_1010.csv  rge_1011.csv  rge_1012.csv  rge_1013.csv  rge_1014.csv  rge_1015.csv  rge_1016.csv  rge_1017.csv  rge_1018.csv  rge_1019.csv  rge_102.csv  rge_1021.csv  rge_1022.csv  rge_1023.csv  rge_1024.csv  rge_1026.csv  rge_1027.csv  rge_1028.csv  rge_1029.csv  rge_103.csv  rge_1030.csv  rge_1031.csv  rge_1032.csv  rge_1033.csv  rge_1034.csv  (+1102 more)
run_data/potentials/: README.md  potential_0.csv  potential_1.csv  potential_10.csv  potential_100.csv  potential_1000.csv  potential_1001.csv  potential_1002.csv  potential_1003.csv  potential_1004.csv  potential_1005.csv  potential_1006.csv  potential_1007.csv  potential_1008.csv  potential_1009.csv  potential_101.csv  potential_1010.csv  potential_1011.csv  potential_1012.csv  potential_1013.csv  potential_1014.csv  potential_1015.csv  potential_1016.csv  potential_1017.csv  potential_1018.csv  potential_1019.csv  potential_102.csv  potential_1020.csv  potential_1021.csv  potential_1022.csv  potential_1023.csv  potential_1024.csv  potential_1025.csv  potential_1026.csv  potential_1027.csv  potential_1028.csv  potential_1029.csv  potential_103.csv  potential_1030.csv  potential_1031.csv  (+1143 more)
run_data/scalar_only/: type_b.csv
rundata/: rge.csv  rge_couplings.csv  type_a1.csv  type_a2.csv
rundata/scalar_only/: refined_data.csv  type_a1.csv  type_a2.csv  type_b.csv  type_c.csv
thdm/: CMakeLists.txt
thdm/apps/: CMakeLists.txt  compare_with_pedro.cpp  full_scan.cpp  info_output.cpp  initial_data_generator.cpp  monte_carlo.cpp  post_processing.cpp  potentials.cpp  rge.cpp
thdm/include/: CMakeLists.txt
thdm/include/thdm/: beta_functions.hpp  constants.hpp  csv_parser.hpp  dual.hpp  eigenvalue_derivatives.hpp  errors.hpp  extrema_type.hpp  fermion_masses.hpp  fields.hpp  gauge_masses.hpp  jacobi.hpp  minimize.hpp  minimize_global.hpp  model.hpp  parameters.hpp  potentials.hpp  qr.hpp  root_finding_eff.hpp  root_refine.hpp  scalar_masses.hpp  tree_roots.hpp  tree_roots_explicit.hpp  vacuua.hpp  validation.hpp
thdm/tests/: CMakeLists.txt  test_dual.cpp  test_gauge_masses.cpp  test_jacobi.cpp  test_minimize.cpp  test_model.cpp  test_nlopt.cpp  test_potential.cpp  test_qr.cpp  test_rge.cpp  test_root_finding.cpp  test_scalar_masses.cpp  test_tree_roots.cpp  test_tree_roots_explict.cpp
